--- a/online-store/src/src/components/card/02-js-task/index.html
+++ b/online-store/src/src/components/card/02-js-task/index.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <title>Card component</title>
-   <!-- <link rel="stylesheet" href="./styles/card.css" />
-    <link rel="stylesheet" href="./styles/main.css" />
-    <link rel="stylesheet" href="./styles/pagination.css" />-->
     <link rel="stylesheet" href="./styles/style.css" />
 
 
@@ -19,19 +16,31 @@
         margin-bottom: 20px;
       }
     </style>
+
   </head>
 
   <body>
     <div id="root" class="wrapper"></div>
 
     <script type="module">
-      import { products } from './products.js';
+      //import OnlineStorePage from './index.js';
+      //import { products } from './products.js';
       import OnlineStorePage from './index.js';
 
-      const page = new OnlineStorePage(products);
-      const root = document.querySelector('#root');
+        const page = new OnlineStorePage();
+        const root = document.querySelector('#root');
 
-      root.append(page.element);
+        root.append(page.element);
+
+     // });
+
+      //const page = new OnlineStorePage({
+        //url: 'https://online-store.bootcamp.place/api/products'
+      //});
+
+
+      //});
+
     </script>
   </body>
 </html>
