add function next, prev, click on pagination.js

--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -21,7 +21,7 @@
     import Card from './card.js';
     import Pagination from './pagination.js';
 
-     const product = {
+    const product = {
       "id": "76w0hz7015kkr9kjkav",
       "images": [
         "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
@@ -33,7 +33,9 @@
       "category": "laptops",
       "brand": "acer"
     };
-    const pagination = new Pagination();
+    const pagination = new Pagination({
+      activePageIndex : 3
+     });
 
     const someElement = document.querySelector('#root');
 
@@ -54,6 +56,12 @@
 
     someElement.append(card.componentElement);
     someElement.append(pagination.element);
+
+    pagination.setPage(9);
+    pagination.prevPage();
+    pagination.prevPage();
+    pagination.prevPage();
+    pagination.nextPage();
   </script>
 </body>
 </html>
