--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -15,49 +15,47 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
-
-    <div class="page-link back">
+      <div class="page-link back">
       <a href="#">
         <i class="bi bi-chevron-left"></i>
       </a>
     </div>
     <ul class="page-list">
-      <li>
-        <a href="#" class="page-link active">1</a>
+      <li class="page-link active">
+        <a href="#">1</a>
       </li>
-      <li>
-        <a href="#" class="page-link">2</a>
+      <li class="page-link">
+        <a href="#">2</a>
       </li>
-      <li>
-        <a href="#" class="page-link">3</a>
+      <li  class="page-link">
+        <a href="#">3</a>
       </li>
-      <li>
-        <a href="#" class="page-link">4</a>
+      <li class="page-link">
+        <a href="#">4</a>
       </li>
-      <li>
-        <a href="#" class="page-link">5</a>
+      <li class="page-link">
+        <a href="#">5</a>
       </li>
-      <li>
-        <a href="#" class="page-link">6</a>
+      <li class="page-link">
+        <a href="#">6</a>
       </li>
-      <li>
-        <a href="#" class="page-link">7</a>
+      <li class="page-link">
+        <a href="#">7</a>
       </li>
-      <li>
-        <a href="#" class="page-link">8</a>
+      <li class="page-link">
+        <a href="#">8</a>
       </li>
-      <li>
-        <a href="#" class="page-link">9</a>
+      <li class="page-link">
+        <a href="#">9</a>
       </li>
-      <li>
-        <a href="#" class="page-link">10</a>
+      <li class="page-link">
+        <a href="#">10</a>
       </li>
-      <li>
-        <a href="#" class="page-link">11</a>
+      <li class="page-link">
+        <a href="#">11</a>
       </li>
-      <li>
-        <a href="#" class="page-link">12</a>
+      <li class="page-link">
+        <a href="#">12</a>
       </li>
     </ul>
 
@@ -66,9 +64,6 @@
         <i class="bi bi-chevron-right"></i>
       </a>
     </div>
-
-
-
   </div>
 </main>
 </body>
