--- a/src/components/cards-list/02-js-task/index.html
+++ b/src/components/cards-list/02-js-task/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href="../01-css-task/style.css">
 </head>
 
 <body>
   <div id="root"></div>
 
   <script type="module">
-    import Card from '../../card/example/index.js';
-    import CardsList from './solution/index.js';
-    import { products } from '../../../fixtures/products.js'
+    import CardsList from '../../cards-list/02-js-task/cards-list.js';
+    import { products } from './products.js'
 
     const cardsList = new CardsList({
       data: products,
