--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -15,7 +15,16 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- DoubleSlider component -->
+    <h3>Price</h3>
+    <div class="container">
+      <div class="slider-track"></div>
+      <input class="left" type="range" min="0" max="85000" value="0" id="slider-1">
+      <input class="right" type="range" min="0" max="85000" value="85000" id="slider-2">
+    </div>
+    <div class="values">
+      <span id="range-1">0 UAH</span>
+      <span id="range-2">85000 UAH</span>
+    </div>
   </div>
 </main>
 </body>
