--- a/src/components/double-slider/02-js-task/index.html
+++ b/src/components/double-slider/02-js-task/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>[Component] component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href="../01-css-task/style.css">
 
   <style>
     .wrapper {
@@ -17,7 +17,7 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import DoubleSlider from './solution/index.js';
+    import DoubleSlider from './index.js';
 
     const slider = new DoubleSlider();
 
