--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -4,18 +4,14 @@
   <meta charset="UTF-8" />
   <title>CardsList component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-
-    }
-  </style>
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <!-- CardsList component -->
-  </div>
+  <div>
+    <div class="os-products-list" data-element="body">
+        <!-- Card list -->
+    </div>
+</div>
 </main>
 </body>
 </html>
