--- a/src/components/pagination/02-js-task/index.html
+++ b/src/components/pagination/02-js-task/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Pagination component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href=".././01-css-task/style.css">
 
   <style>
     .wrapper {
@@ -17,11 +17,11 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Pagination from './solution/index.js';
+    import Pagination from './pagination.js';
 
     const pagination = new Pagination({
-      totalPages: 10,
-      currentPage: 2
+      totalPages: 12,
+      currentPage: 0
     });
 
     root.append(pagination.element);
