--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -11,7 +11,7 @@
       <div class="card">
         <div class="card-1">
           <div class="card-content-image">
-            <img src="/Image/laptope.jpg" alt="Laptop">
+            <img src="" alt="Laptop">
           </div>
 
           <div class="card-content-rating-price">
