--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -8,7 +8,7 @@
 
   <style>
     .wrapper {
-      width: 400px;
+      width: 800px;
       margin: 100px auto;
     }
   </style>
@@ -18,50 +18,13 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Card from './card.js';
-    import Pagination from './pagination.js';
-
-    const product = {
-      "id": "76w0hz7015kkr9kjkav",
-      "images": [
-        "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
-        "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
-      ],
-      "title": "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
-      "rating": 2.89,
-      "price": 15999,
-      "category": "laptops",
-      "brand": "acer"
-    };
-    const pagination = new Pagination({
-      activePageIndex : 3
-     });
-
-    const someElement = document.querySelector('#root');
+    import OnlineStorePage from './onlinestorepage.js';
 
 
-    const monitor = {
-      id: "w73oaydowenkr9kjkav",
-      images: [
-      "https://content1.rozetka.com.ua/goods/images/big_tile/178050370.jpg"
-      ],
-      title: "Монитор 23.8 BenQ GW2475H (9H.LFELA.TBE)",
-      rating: 5,
-      price: 3800,
-      category: "monitors",
-      brand: "benq"
-    };
+        const page = new OnlineStorePage();
+        const root = document.querySelector('#root');
 
-    const card = new Card(product);
-
-    someElement.append(card.componentElement);
-    someElement.append(pagination.element);
-
-    pagination.setPage(9);
-    pagination.prevPage();
-    pagination.prevPage();
-    pagination.prevPage();
-    pagination.nextPage();
+        root.append(page.element);
   </script>
 </body>
 </html>
