--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -14,50 +14,51 @@
 </head>
 <body>
 <main>
-  <div class="wrapper">
+  <div class="os-pagination">
       <div class="page-link back">
-      <a href="#">
-        <i class="bi bi-chevron-left"></i>
-      </a>
-    </div>
-    <ul class="page-list">
-      <li class="page-link active">
-        <a href="#">1</a>
-      </li>
-      <li class="page-link">
-        <a href="#">2</a>
-      </li>
-      <li  class="page-link">
-        <a href="#">3</a>
-      </li>
-      <li class="page-link">
-        <a href="#">4</a>
-      </li>
-      <li class="page-link">
-        <a href="#">5</a>
-      </li>
-      <li class="page-link">
-        <a href="#">6</a>
-      </li>
-      <li class="page-link">
-        <a href="#">7</a>
-      </li>
-      <li class="page-link">
-        <a href="#">8</a>
-      </li>
-      <li class="page-link">
-        <a href="#">9</a>
-      </li>
-      <li class="page-link">
-        <a href="#">10</a>
-      </li>
-      <li class="page-link">
-        <a href="#">11</a>
-      </li>
-      <li class="page-link">
-        <a href="#">12</a>
-      </li>
-    </ul>
+        <a href="#">
+          <i class="bi bi-chevron-left"></i>
+       </a>
+      </div>
+
+      <ul class="page-list">
+        <li class="page-link active">
+          <a href="#">1</a>
+        </li>
+        <li class="page-link">
+          <a href="#">2</a>
+        </li>
+        <li  class="page-link">
+          <a href="#">3</a>
+        </li>
+        <li class="page-link">
+          <a href="#">4</a>
+        </li>
+        <li class="page-link">
+          <a href="#">5</a>
+        </li>
+        <li class="page-link">
+          <a href="#">6</a>
+        </li>
+        <li class="page-link">
+          <a href="#">7</a>
+        </li>
+        <li class="page-link">
+          <a href="#">8</a>
+        </li>
+        <li class="page-link">
+          <a href="#">9</a>
+        </li>
+        <li class="page-link">
+          <a href="#">10</a>
+        </li>
+        <li class="page-link">
+          <a href="#">11</a>
+        </li>
+        <li class="page-link">
+          <a href="#">12</a>
+        </li>
+      </ul>
 
     <div class="page-link next">
       <a href="#">
