--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,53 +1,60 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /* put your styles in this file */
+body {
+  height: 100%;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  all: unset;
+}
 :root {
   --grey: #EDEDED;
   --fiolet: #7E72F2;
-  --black: #000000;
+  --black: #2c2c2c;
   --white: #FFFFFF;
 
 }
-.wrapper {
+.os-pagination {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 }
-.page-list {
+.page-link {
+  align-items: center;
+  background-color: var(--grey);
+  border-radius: 20px;
+  color: var(--black);
   display: flex;
-  flex-direction: row;
+  height: 40px;
+  justify-content: center;
+  transition: .3s;
+  width: 40px;
+}
+.page-list {
+  border-radius: 20px;
+  display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.page-link {
-width: 40px;
-height: 40px;
-background: #EDEDED;
-border-radius: 50%;
-display: flex;
-align-items: center;
-justify-content: center;
-color: var(--black);
-text-decoration: none;
-transition: .3s;
-}
+
 
 .page-link.active {
   background: #7E72F2;
   color: var(--white);
   }
 .next {
-  color: var(--black);
-  text-decoration: none;
-  transition: .3s;
-  margin-left: 15px;
-
+  margin-left:  15px;
 }
 .back {
-  color: var(--black);
-  text-decoration: none;
-  transition: .3s;
   margin-right: 15px;
 }
+
