home work is done

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>Card component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+  <main>
+    <div class="card-shop">
+      <div class="card-shop-main">
+        <div class="card-shop-img">
+          <img src="http://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg" width="100%" alt="laptop">
+        </div>
+        <div class="card-shop-mark-price">
+          <div class="card-shop-mark">
+            <p>1.23</p>
+            <img src="/star-icon.svg" width="15%" alt="star-icon">
+          </div>
+          <p class="card-shop-price">15999</p>
+        </div>
+        <div class="card-shop-name">
+          <a href="#">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</a>
+          <p>laptop</p>
+        </div>
+        <div class="card-shop-button">
+          ADD TO CART
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
