--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,66 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /* put your styles in this file */
+body {
+  margin: 0;
+  font-family: Montserrat, sans-serif;
+}
+
+.wrapper {
+  width: 800px;
+  height: 205px;
+  margin: 100px auto;
+  border: 1px solid #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+a,
+ul {
+  list-style: none;
+  text-decoration: none;
+  color: black;
+}
+
+.pagination {
+  height: 40px;
+  width: 590px;
+  display: flex;
+}
+
+.page-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+}
+
+.page-prev,
+.page-link,
+.page-next {
+  height: 40px;
+  width: 40px;
+  background: #EDEDED;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.page-prev {
+  margin-right: 15px;
+}
+
+.page-next {
+  margin-left: 15px;
+}
+
+
+.page-prev:hover,
+.page-link:hover,
+.page-next:hover {
+  background-color: #7e72f2;
+  color: #FFFFFF;
+  transition-duration: 0.8s;
+}
