Переделал домашнее задание

--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -11,22 +11,22 @@
   <main>
     <div class="wrapper">
       <div class="pagination">
-        <a class="page-prev" href="#"><i class="bi bi-chevron-left"></i></a>
+        <a class="page-link previous" data-element="nav-prev" href="#"><i class="bi bi-chevron-left"></i></a>
         <ul class="page-list">
-          <li><a class="page-link" href="#">1</a></li>
-          <li><a class="page-link" href="#">2</a></li>
-          <li><a class="page-link" href="#">3</a></li>
-          <li><a class="page-link" href="#">4</a></li>
-          <li><a class="page-link" href="#">5</a></li>
-          <li><a class="page-link" href="#">6</a></li>
-          <li><a class="page-link" href="#">7</a></li>
-          <li><a class="page-link" href="#">8</a></li>
-          <li><a class="page-link" href="#">9</a></li>
-          <li><a class="page-link" href="#">10</a></li>
-          <li><a class="page-link" href="#">11</a></li>
-          <li><a class="page-link" href="#">12</a></li>
+          <li><a data-element="page-link" class="page-link active" href="#">1</a></li>
+          <li><a data-element="page-link" class="page-link" href="#">2</a></li>
+          <li><a data-element="page-link" class="page-link" href="#">3</a></li>
+          <li><a data-element="page-link" class="page-link" href="#">4</a></li>
+          <li><a data-element="page-link" class="page-link" href="#">5</a></li>
+          <li><a data-element="page-link" class="page-link" href="#">6</a></li>
+          <li><a data-element="page-link" class="page-link" href="#">7</a></li>
+          <li><a data-element="page-link" class="page-link" href="#">8</a></li>
+          <li><a data-element="page-link" class="page-link" href="#">9</a></li>
+          <li><a data-element="page-link" class="page-link" href="#">10</a></li>
+          <li><a data-element="page-link" class="page-link" href="#">11</a></li>
+          <li><a data-element="page-link" class="page-link" href="#">12</a></li>
         </ul>
-        <a href="#" class="page-next"><i class="bi bi-chevron-right"></i></a>
+        <a href="#" data-element="nav-next" class="page-link next"><i class="bi bi-chevron-right"></i></a>
       </div>
     </div>
   </main>
