Start to resolve problems
came back

--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -8,7 +8,6 @@
 
   <style>
     .wrapper {
-      width: 400px;
       margin: 100px auto;
     }
   </style>
@@ -17,6 +16,9 @@
 <main>
   <div class="wrapper">
     <!-- SearchBox component -->
+    <form class="wert" action="#">
+      <input type="text" class="search-box" placeholder="Search" name="search">
+    </form>
   </div>
 </main>
 </body>
