--- a/src/components/search-box/example/index.html
+++ b/src/components/search-box/example/index.html
@@ -23,7 +23,7 @@
 
     root.append(search.element);
 
-    const BACKEND_URL = 'http://localhost:3000';
+    const BACKEND_URL = 'https://online-store.bootcamp.place/api/';
     const url = new URL('products', BACKEND_URL);
 
     search.element.addEventListener('search-filter', async event => {
