--- a/src/components/side-bar/01-css-task/index.html
+++ b/src/components/side-bar/01-css-task/index.html
@@ -14,8 +14,96 @@
 </head>
 <body>
 <main>
-  <div class="wrapper">
+  <div class="checkbox-wrapper">
     <!-- SideBar component -->
+    <div class="group-wrapper">
+        <h2>Category</h2>
+        <label class="container">Monitors
+          <input type="checkbox" >
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Laptops
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Video cards
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Gaming keyboards
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Computer mouse
+          <input type="checkbox" >
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">SSD
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Sound cards
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">RAM
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+      </div>
+      <div class="group-wrapper">
+        <h2>Brands</h2>
+        <label class="container">Asus
+          <input type="checkbox" >
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Acer
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Apple
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Dell
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Dynamode
+          <input type="checkbox" >
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Gigabyte
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Kingston
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Lenovo
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">Logitech
+          <input type="checkbox" >
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">MSI
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">BenQ
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <label class="container">A4Tech
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+      </div> 
+
+    
   </div>
 </main>
 </body>
