--- a/src/components/side-bar/02-js-task/index.html
+++ b/src/components/side-bar/02-js-task/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>SideBar component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href="../01-css-task/style.css">
   <style>
     .wrapper {
       width: 400px;
@@ -16,7 +16,7 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import SideBar from './solution/index.js';
+    import SideBar from './index.js';
 
     export const categoryFilterConfig = [
       {
