--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,35 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+*{
+    box-sizing: border-box;
+}
+.wrapper{
+    max-width: 990px;
+}
+.search-box{
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 7px;
+    border: transparent;
+    outline: none;
+    font-size: 10px;
+    height: 45px;
+}
+.wert{
+    width:100%;
+    display: inline;
+    position: relative;
+    max-width: 990px;
+}
+.wert::after{
+    content: url("./img/search.svg");
+    font-family: 'icomoon';
+    font-size: 20px;
+    position: absolute;
+    top: 0px;
+    right: 20px;
+}
+input.search-box{
+    width: 100%;
+    font-weight:100;
+    font-size: 16px;
+    padding-left: 20px;
+}
 
-/* put your styles in this file */
