--- a/src/components/search-box/02-js-task/index.html
+++ b/src/components/search-box/02-js-task/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>SearchBox component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href="../01-css-task/style.css">
 
   <style>
     .wrapper {
@@ -17,13 +17,13 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Search from './solution/index.js';
+    import Search from './index.js';
 
     const search = new Search();
 
     root.append(search.element);
 
-    const BACKEND_URL = 'http://localhost:3000';
+    const BACKEND_URL = 'https://online-store.bootcamp.place/api/';
     const url = new URL('products', BACKEND_URL);
 
     search.element.addEventListener('search-filter', async event => {
