--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <title>Cart component</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../card/01-css-task/style.css">
 </head>
 <body>
 <main>
   <div id="root">
     <!-- Cart component -->
+    <div class="wrap-cart">
+      <button class="btn primary-cart">
+        <img class="bi-cart" src="../../card/01-css-task/img/woz.svg"> 
+        <p class="text-cart-number">CART</p>
+      </button>
+    </div>
   </div>
 </main>
 </body>
